# konradus

./: .baw  CHANGELOG  CHANGELOG.md  Makefile  README  pyproject.toml  requirements.dev  requirements.txt  setup.py
.baw/: project.cfg
.github/workflows/: release.yml
docs/: index.rst
docs/releases/: backlog.rst
konrad/: __init__.py  abbreviation.py  lang.py  mark.py  sentence.py  sign.py  utils.py
konrad/quotation/: english.py  german.py
konradus/: __init__.py  abbr.py  lang.py  mark.py  sentence.py  sign.py  utils.py
konradus/quotation/: english.py  german.py
tests/: conftest.py
tests/quotation/: test_german.py
